<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>Dialog</class>
 <widget class="QDialog" name="Dialog">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>600</width>
    <height>800</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Dialog</string>
  </property>
  <widget class="QWidget" name="bgwidget" native="true">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>600</width>
     <height>800</height>
    </rect>
   </property>
   <property name="styleSheet">
    <string notr="true">QWidget#bgwidget{
background-color:qlineargradient(spread:pad, x1:0.112, y1:0.107318, x2:1, y2:0.994, stop:0 rgba(202, 216, 225, 255), stop:1 rgba(255, 255, 255, 255))
}</string>
   </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
      <x>150</x>
      <y>180</y>
      <width>300</width>
      <height>60</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">font: 36pt &quot;Noto Mono&quot;;
color: rgb(52, 52, 52);</string>
    </property>
    <property name="text">
     <string>4IND</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
    </property>
   </widget>
   <widget class="QPushButton" name="loginBtn">
    <property name="geometry">
     <rect>
      <x>150</x>
      <y>480</y>
      <width>300</width>
      <height>45</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton#loginBtn{
	border-radius:20px;
	font: 75 12pt &quot;Manjari Bold&quot;;
	background-color: rgba(26, 36, 122, 200);
	color: rgb(250, 250, 250);
}

QPushButton#loginBtn:hover{
	background-color: rgba(26, 36, 122, 180);

}</string>
    </property>
    <property name="text">
     <string>L o g  I n</string>
    </property>
   </widget>
   <widget class="QPushButton" name="joinBtn">
    <property name="geometry">
     <rect>
      <x>150</x>
      <y>540</y>
      <width>300</width>
      <height>45</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">QPushButton#joinBtn{
	border-radius:20px;
	font: 75 12pt &quot;Manjari Bold&quot;;
	background-color: rgba(191, 210, 225, 200);
	color: rgb(52, 52, 52);
}

QPushButton#joinBtn:hover{
	background-color: rgba(191, 210, 225, 160);
}
</string>
    </property>
    <property name="text">
     <string>J o i n</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="idEdit">
    <property name="geometry">
     <rect>
      <x>150</x>
      <y>310</y>
      <width>300</width>
      <height>40</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">border-radius: 5px;
font: 11pt &quot;Sans Serif&quot;;</string>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
    </property>
    <property name="placeholderText">
     <string>id</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="pwEdit">
    <property name="geometry">
     <rect>
      <x>150</x>
      <y>365</y>
      <width>300</width>
      <height>40</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">border-radius: 5px;
font: 11pt &quot;Sans Serif&quot;;</string>
    </property>
    <property name="text">
     <string/>
    </property>
    <property name="alignment">
     <set>Qt::AlignCenter</set>
    </property>
    <property name="placeholderText">
     <string>password</string>
    </property>
   </widget>
   <widget class="QLabel" name="chLabel">
    <property name="geometry">
     <rect>
      <x>150</x>
      <y>410</y>
      <width>300</width>
      <height>18</height>
     </rect>
    </property>
    <property name="styleSheet">
     <string notr="true">font: 10pt &quot;Sans Serif&quot;;
color: rgb(212, 0, 0);</string>
    </property>
    <property name="text">
     <string/>
    </property>
   </widget>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
